--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       href="../../assets/img/apple-icon.png"
     />
     <link rel="icon" type="image/png" href="../../assets/img/favicon.png" />
-    <title>Argon Dashboard 2 PRO by Creative Tim</title>
+    <title>Cineplex</title>
     <!--     Fonts and icons     -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
